--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,31 +44,39 @@ jobs:
           ln -s $GITHUB_WORKSPACE $(brew --repository ${{github.repository}})
 
       - name: Run brew test-bot --only-cleanup-before
-        run: brew test-bot --only-cleanup-before
+        run: |
+          mkdir ~/bottles
+          cd ~/bottles
+          brew test-bot --only-cleanup-before
 
       - name: Run brew test-bot --only-setup
-        run: brew test-bot --only-setup
+        run: |
+          cd ~/bottles
+          brew test-bot --only-setup
 
       - name: Run brew test-bot --only-formulae
         run: |
-          mkdir bottles
-          cd bottles
+          cd ~/bottles
           brew test-bot --only-formulae --keep-old
 
       - name: Output brew test-bot --only-formulae failures
         if: always()
         run: |
-          cat bottles/steps_output.txt
-          rm bottles/steps_output.txt
+          cat ~/bottles/steps_output.txt
+          rm ~/bottles/steps_output.txt
 
       - name: Count bottles
         id: bottles
         if: always()
         run: |
-          cd bottles
+          cd ~/bottles
           count=$(ls *.json | wc -l | xargs echo -n)
           echo "$count bottles"
           echo "::set-output name=count::$count"
+
+      - name: Move bottles
+        if: always() && steps.bottles.outputs.count > 0
+        run: mv ~/bottles $GITHUB_WORKSPACE
 
       - name: Upload bottles
         if: always() && steps.bottles.outputs.count > 0
