--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,13 +43,11 @@ jobs:
           rm -rf $(brew --repository ${{github.repository}})
           ln -s $GITHUB_WORKSPACE $(brew --repository ${{github.repository}})
 
-      - name: Test tap setup
+      - name: Run brew test-bot --only-cleanup-before
         run: |
-          echo BRANCHES
-          git branch -a || true
-          echo
-          echo REMOTES
-          git remote -va || true
+          mkdir ~/bottles
+          cd ~/bottles
+          brew test-bot --only-cleanup-before
 
       - name: Run brew test-bot --only-setup
         run: brew test-bot --only-setup
